# mcp

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.toml
.claude/: settings.local.json
.claude/skills/: prompt-engineering.skill
Docs/: CATEGORY_VISUALIZATION.md  UI_VISUALIZATION_SYSTEM.md
src/: auth.py  client.py  config.py  oauth.py
src/client/: categories.py  notes.py  tasks.py
src/core/: server.py
src/formatters/: __init__.py  tasks.py
src/templates/: login.html
src/tools/: categories.py  health.py  meta.py  notes.py  tasks.py
